# tg-typist

./: .env.example  .gitignore  AGENTS.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
harness/: README.md  failure-log.md
plans/: README.md
plans/roadmap/: PRD.md  architecture.md  decisions.md  deployment.md  domain-model.md  handoff.md  invariant-checklist.md  progress.md  security-checklist.md  task-template.md  tasks.md
scripts/: smoke_config.py  smoke_db.py  validate.py
src/tg_typist/: __init__.py  logging.py  main.py  settings.py
src/tg_typist/bot/: __init__.py  handlers.py  messages.py  router.py  webhook.py
src/tg_typist/db/: __init__.py  base.py  models.py  repositories.py  session.py
src/tg_typist/db/migrations/: env.py
src/tg_typist/db/migrations/versions/: .keep  20260621_0001_create_core_tables.py  (+1 more)
src/tg_typist/llm/: deepseek.py  errors.py  history.py  prompts.py
src/tg_typist/prompts/: __init__.py  typist_system.md
src/tg_typist/prompts/future/: 01-irrationality-rationality.md  02-extroversion-introversion.md
src/tg_typist/service/: __init__.py  interview.py
tests/: __init__.py
tests/integration/: __init__.py  test_history.py  test_model_call_metadata.py  test_postgres_constraints.py  test_repositories.py  test_text_message_shell.py
tests/unit/: __init__.py  test_bot_handlers.py  test_ci_workflow.py  test_db_models.py  test_db_session.py  test_deepseek_client.py  test_logging.py  test_main.py  test_prompts.py  test_settings.py  test_smoke_db.py  test_validate_script.py  test_webhook.py
