[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[project]
name = "tg-typist"
version = "0.1.0"
description = "Telegram typist interview bot using FastAPI, aiogram, PostgreSQL, and DeepSeek."
readme = "plans/roadmap/PRD.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "alembic>=1.13,<2",
    "asyncpg>=0.29,<1",
    "fastapi>=0.115,<1",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20,<1",
    "mypy>=1.11,<2",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "respx>=0.21,<1",
    "ruff>=0.6,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tg_typist"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
files = ["src/tg_typist"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
